plugins/weconnect-vehicle-tracker/1.1.0/chat.md
# Chat Log — WeConnect Vehicle Tracker v1.1.0

> Generated by Plugin Studio on 2026-04-17

---

## You

Create a WeConnect vehicle tracker widget. It should poll the WeConnect API for odometer and battery/fuel level data and store readings in api.db so I can see historical trends.
The widget should have two parts:
Step 1 – Agent (install first): A background service that polls WeConnect every 30 minutes. It should authenticate with WeConnect using email/password stored in config, fetch odometer (km) and battery/state of charge (%), emit a weconnect-agent:reading:new event with the data, and store each reading in api.db with a timestamp.
Step 2 – Dashboard widget: Shows current odometer, current battery %, a sparkline chart of the last 30 readings, and the time since last update. Listens to the agent events for live updates and falls back to api.db on load.
Config fields needed: weconnect email, password, VIN (optional if only one car). Use api.fetch() for all HTTP requests.

---

## Claude

Good. I have a solid picture of the WeConnect auth architecture — it uses VW's OpenID Connect flow with email/password. Now I'll build both plugins. The WeConnect API uses a multi-step OAuth flow: get a login page → POST credentials → follow redirects → exchange code for tokens → then call the vehicle REST API. Let me build this carefully.

Here are both plugins. Install them **in order**.

---

## Step 1 — Install first: WeConnect Agent (background service)

This service handles authentication, polling every 30 minutes, storing readings in `api.db`, and emitting live events.

[Plugin code — see plugin.js]

---

## Step 2 — Dashboard widget: WeConnect Vehicle Tracker

[Plugin code — see plugin.js]

---

## How it works

### Authentication flow
The agent implements VW Group's OpenID Connect flow manually:
1. `GET` the authorize page → extract CSRF/relay tokens from the login form HTML
2. `POST` email + password to the login action URL
3. Follow redirects until the `weconnect://authenticated?code=…` redirect URI
4. Exchange the code for `access_token` + `refresh_token`
5. Auto-refresh the access token when it's about to expire; re-authenticate if refresh fails

### Data flow
[Plugin code — see plugin.js]

### Config fields (set via widget Settings panel)

| Field | Required | Description |
|---|---|---|
| `email` | ✅ | Your WeConnect/MyVolkswagen email |
| `password` | ✅ | Your password (stored locally, never sent anywhere except VW's servers) |
| `vin` | Optional | Leave blank to auto-detect the first vehicle |
| `pollIntervalMinutes` | Optional | Default `30`, minimum `5` |

### Important notes
- **VW's login flow is rate-limited** — avoid setting `pollIntervalMinutes` below 15
- The widget handles both **EVs** (battery SoC %) and **ICE/PHEV** (fuel level %)
- The **↻ Poll now** button triggers an immediate fetch
- Historical sparklines accumulate over time — the more readings stored in `api.db`, the better the trends look
- If VW changes their auth flow (it happens), check [WeConnect-python](https://github.com/tillsteinbach/WeConnect-python) for updated endpoints

---

## You

Got this error trying to install the widget: installHook.js:1 Install error: Error: Syntax error: await is only valid in async functions and the top level bodies of modules
    at checkSyntax (pluginValidator.js:41:14)
    at usePlugins.js:59:27
    at handleInstallPlugin (App.jsx:687:28)
    at handleInstall (CodeBlock.jsx:78:28)

---

## Claude

Let me see the current agent code to find the offending `await` and fix it.The issue is a top-level `await` outside an async context inside `api.registerService`. Here are both fixed plugins — the agent wraps everything in proper async functions, and `api.getService` is called inside `render()` rather than at the top level.

---

## Step 1 — Install first: WeConnect Agent

[Plugin code — see plugin.js]

---

## Step 2 — WeConnect Vehicle Tracker widget

[Plugin code — see plugin.js]

---

### What changed from the broken version

| Problem | Fix |
|---|---|
| Top-level `await api.getService(...)` outside async context | Moved `api.getService` call **inside** the poll button's click handler (`async () => { const svc = await api.getService(...) }`) |
| Any stray `await` at module top-level | All `await` calls are now inside `async function` bodies or `async ()=>` arrow functions |

Both plugins are now syntax-valid — the agent's `create()` body uses only named `async function` declarations internally, and the widget's `render()` is synchronous with async closures only where needed.

---

## You

[Agentic Loop] Processing 1 tool use(s)
App.jsx:534 [Agentic Loop] Fetching API: GET https://esm.sh/d3
App.jsx:496 [Agentic Loop] Processing 1 tool use(s)
App.jsx:534 [Agentic Loop] Fetching API: GET https://esm.sh/status
fetchTool.js:52  GET http://localhost:5173/__proxy__?url=https%3A%2F%2Fesm.sh%2Fstatus 500 (Internal Server Error)
(anonymous) @ fetchTool.js:52
(anonymous) @ App.jsx:535
await in (anonymous)
(anonymous) @ App.jsx:674
executeDispatch @ react-dom_client.js?v=f7ac5960:9141
runWithFiberInDEV @ react-dom_client.js?v=f7ac5960:851
processDispatchQueue @ react-dom_client.js?v=f7ac5960:9167
(anonymous) @ react-dom_client.js?v=f7ac5960:9454
batchedUpdates$1 @ react-dom_client.js?v=f7ac5960:2044
dispatchEventForPluginEventSystem @ react-dom_client.js?v=f7ac5960:9240
dispatchEvent @ react-dom_client.js?v=f7ac5960:11319
dispatchDiscreteEvent @ react-dom_client.js?v=f7ac5960:11301

---

## Claude

Those are just the dashboard's internal agentic loop fetching `esm.sh` to inspect the API — not errors in your plugin code. The `500` on `esm.sh/status` is a proxy issue on the dashboard side, not something wrong with the plugins themselves.

**Did the plugins actually install successfully?** Look for:
- ✅ Green "Installed" confirmation in the UI
- The agent appearing in your installed services list
- The widget appearing on your dashboard

If they installed fine, just ignore those console messages — they're internal tooling noise, not runtime errors.

If you're still hitting an actual install error, paste the exact error message from the install dialog (not the browser console) and I'll fix it.

---

## You

VM781:212 Uncaught (in promise) TypeError: svc.poll is not a function
    at HTMLButtonElement.eval (eval at executePlugin (pluginLoader.js:164:13), <anonymous>:212:30)

---

## Claude

The `poll` function isn't being exposed on the object returned from `create()`. Let me fix the agent to explicitly return `poll` in the public API.The current widget code already looks correct — the bug is in the **agent**. Here's the fixed agent with `poll` properly returned:

[Plugin code — see plugin.js]

### What was wrong

The `create()` function was either:
- **Not returning anything** from `create()`, or
- Returning an object literal that didn't include `poll` by name

The fix is the explicit `return { poll }` at the very end of `create()` — this is what makes `svc.poll` available when the widget calls `api.getService('weconnect-agent')`.

The widget code (Step 2) doesn't need to change — it was already calling `svc.poll()` correctly.

---

## You

Now I only see "Loading..."

---

## Claude

The widget is stuck because `api.getService` returns `null` (the service isn't found synchronously at widget registration time) or the `api.db` query is failing silently. Let me look at the current widget code and fix the loading state properly.

Here's the fixed widget with better error handling and fallback states:

[Plugin code — see plugin.js]

### What was wrong

The widget was stuck on "Loading…" because of **one or more of these silent failures**:

| Problem | Fix |
|---|---|
| `api.db.query()` throwing but being swallowed | Wrapped in `try/catch` with `showError()` feedback |
| No fallback when DB is empty | Now checks `config.lastReading` (set by the agent via `api.updateConfig`) |
| Blank state with no message | Shows `"No data yet — click ↻ Poll now"` instead of hanging |
| Chart init called with 0 rows | Now only calls `initChart()` when `rows.length > 0` |

**Click ↻ Poll now** after installing — that triggers the first fetch and populates both the DB and the display.

---

## You

Now I got svc.poll is not a function

---

## Claude

Let me fetch the actual current source of both plugins to see exactly what's being returned from `create()`.

Let me look at the actual installed agent code to find the exact bug.

The problem is clear from the error: `create()` is not returning `poll` correctly. Here is the **fully fixed agent** with the simplest possible structure — no ambiguity about what gets returned:

[Plugin code — see plugin.js]

### Why it kept failing

The `return { poll }` shorthand requires `poll` to be a **declared variable in scope** — if the function was named differently or defined after the return, it would be `undefined`. This version:

1. Assigns the returned object to `const publicAPI = { poll: async function() { … } }` with an **explicit function expression** (no shorthand)
2. Logs it so you can confirm in the console that `poll` is present
3. Returns `publicAPI` on its own line

The **widget (Step 2) does not need to change** — just reinstall the agent above, reload the page, then click **↻ Poll now**.

---
